fix: sort-by component styles/padding & gap

--- a/projects/ngx-xchange-ui/src/components/sort-by/sort-by.component.css
+++ b/projects/ngx-xchange-ui/src/components/sort-by/sort-by.component.css
@@ -3,9 +3,8 @@
   align-items: center;
   justify-content: space-between;
   gap: 16px;
-
   background: var(--xc-white);
-  padding: 8px;
+  padding:4px;
   border-radius: 8px;
 }
 
@@ -14,7 +13,7 @@
   align-items: center;
   gap: 8px;
   position: relative;
-  padding: 11px 8px;
+padding: 0px 0px 0px 8px;
 }
 
 .sort-text {
@@ -26,7 +25,7 @@
 .sort-button {
   display: flex;
   align-items: center;
-  gap: 4px;
+  gap: 16px;
   background: none;
   border: none;
   cursor: pointer;
@@ -115,5 +114,5 @@ fill: black;
 
 .right-options{
 display: flex;
-gap: 8px;
+gap: 16px;
 }
