--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -7,18 +7,21 @@
   &_content {
     display: flex;
     flex-direction: column;
-
     &-nav {
       display: flex;
       align-items: center;
       justify-content: end;
       gap: 8px;
-        &-span{
-            display: flex;
-            gap: 16px;
-            background: white;
-            border-radius: 8px;
+      &-span {
+        display: flex;
+        gap: 16px;
+        background: red;
+        border-radius: 8px;
+        padding: 8px;
+        &-button{
+          color: black;
         }
+      }
     }
   }
 }
